# mal-hs

./: .gitignore  README.md  mal-hs.cabal
src/: Environment.hs  IOEnv.hs  Lib.hs  Main.hs  MalVal.hs  Parse.hs
test/: Spec.hs
