name:                mal-hs
version:             0.1.0.0
synopsis:            Make a Lisp! (in Haskell)
description:         Please see README.md
homepage:            https://github.com/cwbriones/mal-hs#readme
license:             MIT
license-file:        LICENSE
author:              Christian Briones
maintainer:          chris@chrisbriones.com
copyright:           2016 Christian Briones
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable mal-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mal-hs
  default-language:    Haskell2010

test-suite mal-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mal-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cwbriones/mal-hs
