name:                mal-hs
version:             0.1.0.0
synopsis:            Make a Lisp! (in Haskell)
description:         Please see README.md
homepage:            https://github.com/cwbriones/mal-hs#readme
license:             MIT
license-file:        LICENSE
author:              Christian Briones
maintainer:          chris@chrisbriones.com
copyright:           2016 Christian Briones
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable mal-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , mtl == 2.2.1
                     , parsec == 3.1.11
                     , containers == 0.5.6.2

test-suite mal-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -Wall -rtsopts=all
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cwbriones/mal-hs
